Centered hero section on mobile layouts and corrected some mistakes on index.html

--- a/Resources/style.css
+++ b/Resources/style.css
@@ -5,13 +5,34 @@
 body {
     margin: 0 auto;
     font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
+}
+
+h1 {
+    letter-spacing: 3px;
+}
+
+h2 {
+    letter-spacing: 2px;
+}
+
+section {
+    padding: 2em 0;
 }
 
 input {
     max-width: 290px;
     align-self: center;
-    margin-bottom: 1em;
+    margin-bottom: .75em;
 }
+
+.row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 
 
 .img-container {
@@ -53,18 +74,13 @@ input {
     width: 100%;
 }
 
-.skills-section {
-    padding: 2em 0;
-}
 
 .projects-section {    
-    padding: 2em 0;
     background-color: #E08B2B;
     color: #fff;
 }
 
 .contact-section {
-    padding: 2em 0;
     background-color: #431594;
 }
 
@@ -79,6 +95,7 @@ input {
 
 .btn {
     max-width: 290px;
+    padding: 1em 2.3em;
     align-self: center;
 }
 
@@ -108,5 +125,6 @@ input {
     .img-container {
         max-width: 400px;
         height: 650px;
+        margin-left: 2em;
     }
 }
